--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,92 @@
     --headings-color: #1b0760;
     --body-color: #918ca4;
 }
+
+/* Typography */
+html{
+
+    font-size: 62.5%;
+}
+
+body{
+    font-family: 'Inter', sans-serif;
+    color: var(--body-color);
+    font-size: 2.4rem;
+    line-height: 1.5;
+}
+
+h1,h2,h3{
+    color: var(--headings-color);
+    margin-bottom: 1.5rem;
+}
+
+h1{
+    font-size: 7rem;
+}
+
+h2{
+    font-size: 4rem;
+}
+
+h3{
+    font-size: 3rem;
+}
+
+p{
+    margin-top: 1.5rem;
+}
+
+@media screen and (min-width: 1024px){
+
+    body{
+        font-size: 1.8rem;
+    }
+
+    h1{
+        font-size: 8rem;
+    }
+
+    h2{
+        font-size: 4rem;
+    }
+
+    h3{
+        font-size: 3rem;
+    }
+}
+
+/* Links */
+
+a{
+    text-decoration: none;
+}
+
+.link-arrow{
+    color: var(--accent-color);
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.link-arrow::after{
+    content: '-->';
+    margin-left: 5px;
+    transition: margin 0.25s;
+}
+
+.link-arrow:hover::after{
+    margin-left: 18px;
+}
+
+@media screen and (min-width: 1024px){
+    
+ .link-arrow{
+    font-size: 1.5rem;    
+}
+
+}
+
+
+
+
+
