--- a/css/styles.css
+++ b/css/styles.css
@@ -165,4 +165,28 @@ a{
 }
 
 
+/*Icons*/
+
+.icon{
+    height: 40px;
+    width: 40px;
+}
+
+.icon--primary{
+    fill: var(--primary-color);
+}
+
+.icon-container{
+    height: 64px;
+    width: 64px;
+    background-color: #f3f9fa;
+    border-radius: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
 
