--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --accent-color: #ff3400;
     --headings-color: #1b0760;
     --body-color: #918ca4;
+    --border-radius: 30px;
 }
 
 *,*::after,*::before{
@@ -253,10 +254,11 @@ a{
     }
 }
 
+
 /* Inputs */
 .inputs{
-    border-radius: 20px;
-    border: 1px solid lightgrey;
+    border-radius: var(--border-radius);
+    border: 0;
     padding: 0.8rem 1rem;
     outline: 0;
     color: var(--headings-color);
@@ -265,12 +267,39 @@ a{
 
 ::placeholder{
     color: #cdcbd7;
+    letter-spacing: 0.1rem;
 }
 
 @media screen and (min-width: 1024px){
     .inputs{
         font-size: 1.2rem;
     }
+}
+
+
+/* Input */
+
+.input-group{
+    margin: 2rem 1.5rem;
+    border: 1px solid #ccc;
+    border-radius: var(--border-radius);
+    display: flex;
+}
+
+.input-group .inputs{
+    padding: 0.5rem 2rem;
+    flex-grow: 1;
+}
+
+.input-group .btn{
+    margin: 0;
+    padding: 2rem 3rem;
+    font-size: 1.2rem;
+    transition: padding-left 0.30s;
+}
+
+.input-group .btn:hover{
+    padding-left: 10rem;
 }
 
 
