--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --secondary-color: #00d9ff;
     --accent-color: #ff3400;
     --headings-color: #1b0760;
+    --body-color-darker: #5c5577;
     --body-color: #918ca4;
     --border-radius: 30px;
 }
@@ -303,3 +304,58 @@ a{
 }
 
 
+/* Quotes */
+.quotes{
+    font-size: 3rem;
+    font-style: italic;
+    color: var(--body-color-darker);
+    line-height: 1.4;
+}
+
+.quote__text::before{
+    content: open-quote;
+}
+
+.quote__text::after{
+    content: close-quote;
+}
+
+.quote__author{
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: bold;
+}
+
+.quote__org{
+    font-size: 2rem;
+    font-style: normal;
+    color: var(--headings-color);
+    opacity: 0.4;
+    line-height: 0.5;
+}
+
+.media__body{
+    position: relative;
+    left: 7rem;
+    bottom: 8rem;
+}
+
+.media__image{
+    position: relative;
+    left: 1rem;
+}
+
+@media screen and (min-width: 1024px){
+
+    .quotes{
+        font-size: 2rem;
+    }
+
+    .quote__author{
+        font-size: 2.4rem;
+    }
+
+    .quote__org{
+        font-size: 1.6rem;
+    }
+}
