--- a/css/styles.css
+++ b/css/styles.css
@@ -563,4 +563,35 @@ body{
         margin: 0 6rem;
     }
 }
-  
+
+/* Collapsibles */
+.collapsible__header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.collapsible__header > h3{
+    margin-top: 0;
+    font-size: 3rem;
+}
+
+.collapsible__chevron{
+    transform: rotate(-90deg);
+    transition: transform 0.5s;
+}
+
+.collapsible__content{
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: all 0.5s;
+}
+
+.collapsible--expanded .collapsible__chevron{
+    transform: rotate(0deg);
+}
+
+.collapsible--expanded .collapsible__content{
+    max-height: 100vh;
+    opacity: 1;
+}
