--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body{
 h1,h2,h3{
     color: var(--headings-color);
     margin-bottom: 1.5rem;
+    line-height: 1.1;
 }
 
 h1{
@@ -248,6 +249,11 @@ a{
 .btn--secondary-two:hover{
     background: #fff;
     color: #000;
+}
+
+.btn--stretched{
+    padding-left: 6rem;
+    padding-right: 6rem;
 }
 
 .btn--block{
@@ -595,3 +601,146 @@ body{
     max-height: 100vh;
     opacity: 1;
 }
+
+
+/* Blocks */
+.block {
+    --padding-vertical: 6rem;
+    padding: var(--padding-vertical) 2rem;
+  }
+  
+  .block__header {
+    text-align: center;
+  }
+  
+  .block__heading {
+    margin-top: 0;
+  }
+  
+  .block--dark {
+    background: #000;
+    color: #7b858b;
+  }
+  
+  .block--dark .block__heading {
+    color: #fff;
+  }
+  
+  .block--skewed-right {
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  }
+  
+  .block--skewed-left {
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+  }
+  
+  .container {
+    max-width: 1140px;
+    margin: 0 auto;
+  }
+  
+
+  /* Navigation-Bar*/
+  body{
+    padding: 0;
+  }
+  .nav{
+    background: #000;
+    padding: 1rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .nav__list{
+    margin: 0;
+    width: 100%;
+  }
+
+  .nav__items{
+    font-size: 2rem;
+    padding: 1rem 2rem;
+    border-bottom: 1px solid #222;
+  }
+
+  .nav__items > a{
+    color: #d2d0db;
+    transition: all 0.5s;
+  }
+
+  .nav__items > a:hover{
+    font-size: 2.2rem;
+    color: #fff;
+  }
+
+  .nav__toggler{
+    opacity: 0.5;
+    transition: box-shadow 0.15s;
+    cursor: pointer;
+  }
+
+  .collapsible--expanded .nav__toggler{
+    opacity: 1;
+    box-shadow: 0 0 0 3px #666;
+    border-radius: 5px;
+  }
+
+  .nav__brand{
+    transform: translateY(7px);
+  }
+
+
+  @media screen and (min-width:768px){
+    .nav__toggler{
+        display: none;
+    }
+
+    .nav__list{
+        display: flex;
+        width: auto;
+        font-size: 1.6rem;
+        max-height: 100%;
+        opacity: 1;
+    }
+
+    .nav__items{
+        border: 0;
+    }
+  }
+
+  /* Hero */
+.hero {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+  }
+  
+  .hero__tagline {
+    font-size: 2rem;
+    color: #b9c3cf;
+    letter-spacing: 1px;
+    margin: 2rem 1rem;
+    margin-bottom: 60px;
+  }
+  
+  .hero__image {
+    width: 100%;
+  }
+
+  .hero__content > a{
+    font-size: 2rem;
+    padding: 2rem 4rem;
+}
+  
+  @media screen and (min-width: 768px) {
+    .hero {
+      padding-top: 0;
+    }
+  
+    .hero__content {
+      text-align: left;
+      align-self: center;
+    }
+  }
+  
