--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,12 @@ a{
     white-space: nowrap;
 }
 
+.btn .icon{
+   width: 2rem;
+   height: 2rem;
+   margin-right: 1rem;
+   vertical-align: middle;
+}
 .btn--accent{
     background-color: var(--accent-color);
     color: #fff;
@@ -744,3 +750,28 @@ body{
     }
   }
   
+/* Domain Block */
+.block--domain .input-group{
+    box-shadow: 0 0 30px 10px #e6ebee;
+    border: 0;
+    border: 0;
+    max-width: 600px;
+    margin: 4rem auto;
+}
+
+.block--domain__prices{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,6rem);
+    font-size: 1.8rem;
+    font-weight: 600;
+    justify-items: center;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width:768px){
+    .block--domain__prices{
+        grid-template-columns: repeat(auto-fit, minmax(100px,1fr));
+    }
+}
