--- a/css/styles.css
+++ b/css/styles.css
@@ -104,9 +104,10 @@ a{
 
 .badges{
  border-radius: 30px;
- font-size: 2rem;
+ font-size: 1.5rem;
  font-weight: 600;
- padding: 1.5rem 2rem;
+ padding: 1.5rem 1.8rem;
+ padding: 1.5rem 1.8rem;
  white-space: nowrap;
 
 }
@@ -266,6 +267,10 @@ a{
     width: 100%;
 }
 
+.btn--plan{
+    padding: 2rem;
+}
+
 .btn--outline{
     background: #fff;
     color: var(--headings-color);
@@ -354,9 +359,21 @@ a{
     background: var(--secondary-color);
     color: #fff;
   }
+
+  .card--primary .badge--secondary{
+    background: #126de4;
+  }
+
+  
+  .card--secondary .badge--secondary{
+    background: #02cdf1;
+  }
   
 
 /* Plans */
+.plan{
+    transition: transform 0.05s ease-out;
+}
 .plan__name {
     color: #fff;
     margin: 0;
@@ -384,6 +401,10 @@ a{
   
   .plan .list__item {
     margin-bottom: 2rem;
+  }
+
+  .plan--popular{
+    transform: scale(1.1);
   }
   
   .plan--popular .card__header {
@@ -774,4 +795,30 @@ body{
     .block--domain__prices{
         grid-template-columns: repeat(auto-fit, minmax(100px,1fr));
     }
+}
+
+/* Plans Block */
+.block--plans .grid{
+    gap: 6rem 4rem;
+}
+
+.block--plan .card{
+    max-width: 300px;
+}
+
+
+@media screen and (min-width: 1024px){
+    .grid--1x3{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 5rem;
+        column-gap: 5rem;
+    }
+}
+
+.plan:hover{
+    transform: scale(1.05);    
+}
+.plan--popular:hover{
+    transform: scale(1.15);
 }
