--- a/css/styles.css
+++ b/css/styles.css
@@ -846,3 +846,35 @@ body{
         order: 2;
     }
 } */
+
+
+/* Showcase Block */
+.block-showcase__image > img {
+    width: 100%;
+  }
+
+.block-showcase__media__title{
+    margin-top: 0; 
+}
+
+.block-showcase .media__body > p{
+    margin-bottom: 5rem;
+    color: #fff;
+}
+  
+  @media screen and (min-width: 768px) {
+    .block-showcase .grid {
+      grid-template-columns: 50% 50%;
+      column-gap: 6rem
+    }
+  
+    .block-showcase__image {
+      justify-self: end;
+    }
+  
+    .block-showcase__image > img {
+      width: auto;
+      max-width: 700px;
+    }
+  }
+  
