--- a/css/styles.css
+++ b/css/styles.css
@@ -603,10 +603,6 @@ body{
     justify-content: space-between;
 }
 
-.collapsible__header > h3{
-    margin-top: 0;
-    font-size: 3rem;
-}
 
 .collapsible__chevron{
     transform: rotate(-90deg);
@@ -618,6 +614,12 @@ body{
     overflow: hidden;
     opacity: 0;
     transition: all 0.5s;
+}
+
+.collapsible__heading{
+    color: #fff;
+    margin-top: 0;
+    font-size: 3rem;
 }
 
 .collapsible--expanded .collapsible__chevron{
@@ -881,9 +883,95 @@ body{
   
 
   /* Block-testimonial */
-
+    
   @media screen and (min-width:768px){
     .block-testimonial__grid--1x2{
         grid-template-columns: 1fr 1fr;
     }
   }
+
+  /* Footer */
+  .footer{
+    background: #232323;
+  }
+
+  .footer__section{
+    padding: 2rem;
+    border-bottom: 1px solid #393939;
+  }
+
+  .footer__heading{
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+
+  .footer__brand{
+    margin-top: 5rem;
+    text-align: center;
+  }
+
+  .footer__copyright{
+    font-size: 2.6rem;
+    color: #fff;
+    opacity: 0.3;
+  }
+
+  .footer a{
+    color: #777;
+    transition: all 0.3s;
+    
+}
+
+.footer a:hover{
+    font-size: 2.6rem;
+    color: #fff;
+}
+
+
+  @media screen and (min-width:768px){
+
+    .footer__sections{
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    }
+
+    .footer .collapsible__chevron{
+        display: none;
+    }   
+    
+    .footer__brand{
+        order: -1;
+        margin-top: 1rem;
+    }
+
+    .footer__copyright{
+        font-size: 1.3rem;
+        margin-top: 1rem;
+    }
+    
+    .footer .collapsible__content{
+        opacity: 1;
+        max-height: 100%;
+        font-size: 1.5rem;
+    }
+
+    .footer__section{
+        border: 0;
+    }
+
+    .footer__heading{
+        font-size: 1.6rem;
+    }
+
+    .footer__brand > img{
+        width: 100%;
+    }
+
+    .footer a:hover{
+        font-size: 1.6rem;
+        color: #fff;
+    }
+
+    .footer .lists{
+        margin: 0;
+    }
+} 
