Putting everything together and finshing up

--- a/components/footer.html
+++ b/components/footer.html
@@ -57,6 +57,7 @@
     <section class="collapsible footer__section">
       <header class="collapsible__header">
         <h3 class="collapsible__heading footer__heading">Contact Me</h3>
+        <h3 class="collapsible__heading footer__heading">Contact Me</h3>
         <span class="collapsible__chevron">
           <i class="fa-solid fa-circle-chevron-down"></i>
         </span>
